--- a/AdminView/Views/Home/Users.cshtml
+++ b/AdminView/Views/Home/Users.cshtml
@@ -51,20 +51,20 @@
                 <h5 class="modal-title" id="exampleModalLabel">Nuevo Usuario</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body g-2">
-                <input id="txtId" type="hidden" value="0"/>
-                <div class="row">
+            <div class="modal-body">
+                <input id="txtId" type="hidden" value="0" />
+                <div class="row g-2">
                     <div class="col-sm-6">
                         <label for="txtFirstname" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="txtFirstname">
+                        <input type="text" class="form-control" id="txtFirstname" autocomplete="off">
                     </div>
                     <div class="col-sm-6">
                         <label for="txtLastname" class="form-label">Apellido</label>
-                        <input type="text" class="form-control" id="txtLastname">
+                        <input type="text" class="form-control" id="txtLastname" autocomplete="off">
                     </div>
                     <div class="col-sm-6">
                         <label for="txtEmail" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="txtEmail" placeholder="name@example.com">
+                        <input type="email" class="form-control" id="txtEmail" placeholder="name@example.com" autocomplete="off">
                     </div>
                     <div class="col-sm-6">
                         <label for="userActive" class="form-label">Activo</label>
@@ -72,6 +72,13 @@
                             <option value="1">SI</option>
                             <option value="0">NO</option>
                         </select>
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-12">
+                        <div id="errorMessage" class="alert alert-danger" role="alert">
+                            A simple danger alert—check it out!
+                        </div>
                     </div>
                 </div>
             </div>
@@ -124,6 +131,7 @@
             $("#txtLastname").val("");
             $("#txtEmail").val("");
             $("#userActive").val(1);
+            $("#errorMessage").hide();
             if (json != null) {
                 $("#txtId").val(json.IdUser);
                 $("#txtFirstname").val(json.Firstname);
@@ -156,27 +164,58 @@
             jQuery.ajax({
                 url: '@Url.Action("AddUser","Home")',
                 type: "POST",
-                data: JSON.stringify({ user: user }),
+                data: JSON.stringify({ userController : user }),
                 dataType: "json",
                 contentType: "application/json; charset=utf-8",
                 success: function (data) {
-                    console.log(data)
-                }, error: function (error) {
-                    console.log(error)
+                    $(".modal-body").LoadingOverlay("hide");
+                    //Usuario nuevo
+                    if (user.IdUser == 0) {
+                        if (data.result.IdUser != 0) {
+                            user.IdUser = data.result.IdUser;
+                            tabledata.row.add(user).draw(false);
+                            $("#FormModal").modal("hide");
+                        } else {
+                            $(".modal-body").LoadingOverlay("hide");
+                            $("#errorMessage").text(error.error);
+                            $("#errorMessage").show();
+                        }
+                    } else {
+                        tabledata.row(selectedRow).data(user).draw(false);
+                        $("#FormModal").modal("hide");
+                    }
+                }, error: function (xhr) {
+                    $(".modal-body").LoadingOverlay("hide");
+                    if (xhr.status === 400) {
+                        var error = JSON.parse(xhr.responseText);
+                        $("#errorMessage").text(error.error);
+                        $("#errorMessage").show();
+                    } else {
+                        console.log("Error inesperado:", xhr.responseText);
+                    }
                 },
                 beforeSend: function () {
-
-                },
+                    $(".modal-body").LoadingOverlay("show", {
+                        imageResizeFactor: 2,
+                        text: "Cargando...",
+                        size: 14
+                    })
+                }
             });
-            if (user.IdUser == 0) {
-                tabledata.row.add(user).draw(false);
-            } else {
-                tabledata.row(selectedRow).data(user).draw(false);
-            }
-            $("#FormModal").modal("hide");
         }
-
-
 
     </script>
 }
+
+@*swal({
+  title: "Are you sure?",
+  text: "Your will not be able to recover this imaginary file!",
+  type: "warning",
+  showCancelButton: true,
+  confirmButtonClass: "btn-danger",
+  confirmButtonText: "Yes, delete it!",
+  closeOnConfirm: false
+},
+function(){
+  swal("Deleted!", "Your imaginary file has been deleted.", "success");
+});*@
