--- a/AdminView/Views/Home/Users.cshtml
+++ b/AdminView/Views/Home/Users.cshtml
@@ -114,7 +114,7 @@
                 },
                 {
                     "defaultContent": '<button type="button" class="btn btn-success btn-sm btn-edit"><i class="fas fa-pen me-1"></i></button>' +
-                        '<button type="button" class="btn btn-danger btn-sm ms-2"><i class="fas fa-trash me-1"></i></button>',
+                        '<button type="button" class="btn btn-danger btn-sm ms-2 btn-delete"><i class="fas fa-trash me-1"></i></button>',
                     "orderable": false,
                     "searchtable": false,
                     "width": "90px"
@@ -148,9 +148,54 @@
 
             var data = tabledata.row(selectedRow).data();
 
-            console.log(data)
+            console.log(data);
 
-            openModal(data)
+            openModal(data);
+        })
+
+        $("#table tbody").on("click", '.btn-delete', function () {
+            var selectedUser = $(this).closest("tr");
+
+            var data = tabledata.row(selectedUser).data();
+
+            swal({
+                title: "¿Desea eliminar el usuario?",
+                type: "warning",
+                showCancelButton: true,
+                confirmButtonClass: "btn-danger",
+                confirmButtonText: "SI",
+                cancelButtonClass: "btn-primary",
+                cancelButtonText: "NO",
+                closeOnConfirm: true
+                },
+                function () {
+                    jQuery.ajax({
+                        url: '@Url.Action("DeleteUser","Home")',
+                        type: "POST",
+                        data: JSON.stringify({ id : data.IdUser }),
+                        dataType: "json",
+                        contentType: "application/json; charset=utf-8",
+                        success: function (data) {
+                            if (data.result) {
+                                tabledata.row(selectedUser).remove().draw();
+                            } else {
+                                swal("No se ha podido eliminar");
+                            }
+                        }, error: function (xhr) {
+                            $(".modal-body").LoadingOverlay("hide");
+                            if (xhr.status === 400) {
+                                var error = JSON.parse(xhr.responseText);
+                                $("#errorMessage").text(error.error);
+                                $("#errorMessage").show();
+                            } else {
+                                console.log("Error inesperado:", xhr.responseText);
+                            }
+                        }
+                    });
+                }
+            );
+
+            console.log(data);
         })
 
         function Save() {
@@ -206,16 +251,3 @@
 
     </script>
 }
-
-@*swal({
-  title: "Are you sure?",
-  text: "Your will not be able to recover this imaginary file!",
-  type: "warning",
-  showCancelButton: true,
-  confirmButtonClass: "btn-danger",
-  confirmButtonText: "Yes, delete it!",
-  closeOnConfirm: false
-},
-function(){
-  swal("Deleted!", "Your imaginary file has been deleted.", "success");
-});*@
