ya se muestran los nombres de las colecciones en el listado de productos

--- a/AdminView/Views/Maintenance/Product.cshtml
+++ b/AdminView/Views/Maintenance/Product.cshtml
@@ -32,6 +32,7 @@
                 <tr>
                     <th>Nombre</th>
                     <th>Descripción</th>
+                    <th>Collección</th>
                     <th>Precio</th>
                     <th>Stock</th>
                     <th>Brilla</th>
@@ -66,17 +67,15 @@
                         <label for="txtDescription" class="form-label">Descripción</label>
                         <textarea class="form-control" id="txtDescription" rows="2"></textarea>
                     </div>
-                    <div class="col-md-12 m-1">
+                    <div class="col-md-3 input-group mb-1">
                         <span class="input-group-text">$</span>
                         <input type="text" class="form-control" id="txtPrice" aria-label="Amount (to the nearest dollar)">
-                    </div>
-                    <div class="col-md-12 m-1">
                         <label for="txtStock" class="form-label">Stock</label>
                         <input type="number" class="form-control" id="txtStock" value="0" min="0">
                     </div>
                     <div class="col-md-12 m-1">
                         <label for="txtCollection" class="form-label">Colección</label>
-                        <textarea type="text" class="form-control" id="txtCollection"></textarea>
+                        <input type="text" class="form-control" id="txtCollection" autocomplete="off">
                     </div>
                     <div class="col-md-12 m-1">
                         <label for="shine" class="form-label">Brilla</label>
@@ -128,9 +127,9 @@
             "columns": [
                 { "data": "Name" },
                 { "data": "Description" },
+                { "data": "Collection.Name" },
                 { "data": "Price" },
                 { "data": "Stock" },
-                { "data": "Collection" },
                 {
                     "data": "Shine", "render": function (value) {
                         if (value) return '<span class="badge bg-primary">SI</span>'
@@ -194,7 +193,7 @@
             var data = tabledata.row(selectedProduct).data();
 
             swal({
-                title: "¿Desea eliminar la producto?",
+                title: "¿Desea eliminar el producto?",
                 type: "warning",
                 showCancelButton: true,
                 confirmButtonClass: "btn-danger",
